[package]
name = "halo2-semaphore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", features = ["dev-graph"], tag = "v2022_10_22"}
halo2_gadgets = { git = "https://github.com/privacy-scaling-explorations/halo2.git"}
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = '0.3.0' }
# halo2wrong = {git = 'https://github.com/vuvoth/halo2wrong.git', features = ["dev-graph"]}
transcript = {path = "../../../halo2wrong/transcript"}
poseidon = {git = 'https://github.com/privacy-scaling-explorations/poseidon.git', tag = "v2022_10_22"}
rand_core = { version = "0.6", default-features = false }
plotters = { version = "0.3.0" }
